--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >Web<span class="logo-header">Studio</span></a
         >
         <ul class="header-list list">
-          <li><a class="header-link link nav-link current  " href="./index.html">Studio</a></li>
+          <li><a class="header-link link nav-link current active  " href="./index.html">Studio</a></li>
           <li><a class="header-link link nav-link  " href="./portfolio.html">Portfolio</a></li>
           <li><a class="header-link link nav-link " href="">Contacts</a></li>
         </ul>
