--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
         >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link nav-link" href="./index.html">Studio</a>
+            <a class="header-link link nav-link a" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link current" href="./portfolio.html"
+            <a class="header-link link current active" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
