--- a/portfolio.html
+++ b/portfolio.html
@@ -87,72 +87,167 @@
           <!--Project cards-->
           <h1 class="visually-hidden">Project cards</h1>
           <ul class="project-card-list list">
+              
             <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-1-min.jpg"
+              >
+              <div class="project-overlay"> 
               <img
                 src="./images/img-1-min.jpg"
                 alt="example of
               project"
-              />
+              width="360"
+                    class="main-image"/>
+              <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+            </div>
                <div class="project-wrap"> 
               <h2 class="project-card-title">Banking App Interface Concept</h2>
               <p class="project-item-text">App</p>
             </div>
             </li>
             <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-2-min.jpg"
+              >
+              <div class="project-overlay"> 
               <img
                 src="./images/img-2-min.jpg"
                 alt="example of
               project"
-              /> <div class="project-wrap">  
+              width="360"
+                    class="main-image"
+              />
+              <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+            </div>
+               <div class="project-wrap">  
               <h2 class="project-card-title">Cashless Payment</h2>
               <p class="project-item-text">Marketing</p>
             </div>
             </li>
             <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-3-min.jpg"
+              >
+
+              <div class="project-overlay">   
               <img
                 src="./images/img-3-min.jpg"
                 alt="example of
               project"
-              /> <div class="project-wrap"> 
+              width="360"
+                    class="main-image"
+              />
+              <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+            </div>
+               <div class="project-wrap"> 
               <h2 class="project-card-title">Meditaion App</h2>
               <p class="project-item-text">App</p>
             </div>
             </li>
             <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-4-min.jpg"
+              >
+              <div class="project-overlay"> 
               <img
                 src="./images/img-4-min.jpg"
                 alt="example of
               project"
-              /> <div class="project-wrap">  
+              width="360"
+                    class="main-image"
+              />
+               <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+            </div>
+              <div class="project-wrap">  
               <h2 class="project-card-title">Taxi Service</h2>
               <p class="project-item-text">Marketing</p>
             </div>
             </li>
             <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-5-min.jpg"
+              >
+              <div class="project-overlay"> 
               <img
                 src="./images/img-5-min.jpg"
                 alt="example of
               project"
-              /> 
+              width="360"
+                    class="main-image"
+              />
+              <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p> 
+            </div>
               <div class="project-wrap">   
               <h2 class="project-card-title">Screen Illustrations</h2>
               <p class="project-item-text">Design</p>
             </div>
             </li>
-            <li>
+            <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-6-min.jpg"
+              >
+              <div class="project-overlay">  
               <img
                 src="./images/img-6-min.jpg"
                 alt="example of
-              project"/>
+              project"
+              width="360"
+                    class="main-image"/>
+              <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+            </div>
               <div class="project-wrap">  
               <h2 class="project-card-title">Online Courses</h2>
               <p class="project-item-text">Marketing</p>
               </div>
             </li>
             <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-7-min.jpg"
+              >
+              <div class="project-overlay">    
               <img
                 src="./images/img-7-min.jpg"
-                alt="example of project"/> 
+                alt="example of project"
+                width="360"
+                    class="main-image"/>
+                 <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="project-wrap"> 
               <h2 class="project-card-title">Instagram Stories Concept</h2>
               <p class="project-item-text">Design</p>
@@ -160,21 +255,47 @@
             </li>
           
             <li class="project-card-item">
+              <a
+                class="main-link"
+                href="./images/img-8-min.jpg"
+              >
+              <div class="project-overlay">   
               <img
                 src="./images/img-8-min.jpg"
-                alt="example of project"/>
+                alt="example of project"
+                width="360"
+                    class="main-image"/>
+                <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
                <div class="project-wrap"> 
               <h2 class="project-card-title">Organic Food</h2>
               <p class="project-item-text">Web Site</p>
             </div>
             </li>
-            <li class="project-card-item">
+            <li class="project-card-item link">
+              <a
+                class="main-link"
+                href="./images/img-9-min.jpg"
+              >
+              <div class="project-overlay">  
               <img
                 src="./images/img-9-min.jpg"
-                alt="example of project"/>
+                alt="example of project"
+                width="360"
+                    class="main-image"/>
+                <p class="project-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
                  <div class="project-wrap"> 
-              <h2 class="project-card-title">Fresh Coffee</h2>
-              <p class="project-item-text">Web Site</p>
+              <h2 class="project-card-title ">Fresh Coffee</h2>
+              <p class="project-item-text ">Web Site</p>
             </div>
             </li>
           </ul>
