--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
     <header class="header">
       <div class="container header-container">
       <nav class="header-navigation">
-        <a class="logo link" href="./portfolio.html"
+        <a class="logo link paddings" href="./portfolio.html"
           >Web<span class="logo-header">Studio</span></a
         >
         <ul class="header-list list">
-          <li><a class="header-link link nav-link current active  " href="./index.html">Studio</a></li>
+          <li><a class="header-link link nav-link  current active" href="./index.html">Studio</a></li>
           <li><a class="header-link link nav-link  " href="./portfolio.html">Portfolio</a></li>
-          <li><a class="header-link link nav-link " href="">Contacts</a></li>
+          <li><a class="header-link link nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <!--Adress-->
       <address class="adress">
         <ul class="adress-list list">
           <li class="adress-item link">
-            <a  class="adress-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a  class="adress-mail link " href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="adress-item">
-            <a class="adress-tel link" href="tel:+110001111111"
+            <a class="adress-tel link  " href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
         </ul>
