--- a/portfolio.html
+++ b/portfolio.html
@@ -370,7 +370,28 @@
          </li>
        </ul>
        </div>
-      </div>     
+      </div>  
+      <div class="social-footer-container">
+        <p class="social-footer-header">Subscribe</p>
+        <form class="subscribe-form">
+          <div class="subscribe-input">
+            <input
+              name="email"
+              type="email"
+              class="input-email"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="button-submit">
+              Subscribe<svg class="subscribe-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+    </div>
+   
     </footer>
     <script src="./js/modal.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
